# t3rn

.github/workflows/: circuit-parachain-release.yml  circuit-release.yml
circuit/: .gitignore  Cargo.toml  init.sh  run-circuit.sh  up.sh
circuit/src/: chain_spec.rs  service.rs
circuit/src/archive/: Cargo.toml  archive.toml
circuit/src/archive/src/: cli_opts.rs  main.rs
circuit/src/contract-registry/: Cargo.toml  README.md  SCRATCH.md
circuit/src/contract-registry/src/: lib.rs  mock.rs  tests.rs
circuit/src/registry/: Cargo.toml  README.md
circuit/src/registry/src/: lib.rs  mock.rs  tests.rs
circuit/src/runtime/: Cargo.toml
circuit/src/runtime/src/: lib.rs
