[package]
name = "circuit"
description = "Circuit node"
version = "0.1.0"
authors = ["MaciejBaj <maciej@maciejbaj.com>"]
edition = "2018"
build = "build.rs"
homepage = "https://t3rn.io"
license = "Apache 2.0"
repository = "https://github.com/t3rn/t3rn/"

[dependencies]
jsonrpc-core = "15.1.0"
structopt = "0.3.21"

# Bridge dependencies

bp-messages = { git = "https://github.com/MaciejBaj/parity-bridges-common", branch = "development" }
bp-circuit= { git = "https://github.com/MaciejBaj/parity-bridges-common", branch = "development" }
bp-runtime = { git = "https://github.com/MaciejBaj/parity-bridges-common", branch = "development" }
circuit-runtime = { path = "./src/runtime" }
pallet-bridge-messages = { git = "https://github.com/MaciejBaj/parity-bridges-common", branch = "development" }
pallet-bridge-messages-rpc = { git = "https://github.com/MaciejBaj/parity-bridges-common", branch = "development" }

# Substrate Dependencies

frame-benchmarking = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
node-inspect = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-cli = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0", features = ["wasmtime"] }
sc-client-api = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-consensus = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-executor = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-keystore = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-rpc = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-service = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-consensus = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-inherents = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }

[build-dependencies]
substrate-build-script-utils = "3.0.0"
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }

[features]
default = []

# TODO: https://github.com/paritytech/parity-bridges-common/issues/390
# I've left the feature flag here to test our CI configuration
runtime-benchmarks = [
    # "millau-runtime/runtime-benchmarks",
]