[package]
name = "offchain-archive"
version = "0.2.1"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"
description = "Indexes Substrate Data"

[dependencies]
anyhow = "1.0"
ctrlc = { version = "3.1.5", features = ["termination"] }
log = "0.4"
serde = "1.0"
structopt = { version = "0.3", features = ["suggestions", "color"] }
toml = "0.5"

circuit-runtime = { path = "../runtime", default-features = false }
circuit = { path = "../.." }

substrate-archive = { git = "https://github.com/paritytech/substrate-archive", tag = "0.5" }
