[package]
authors = ['0x1a3']
description = 'FRAME pallet encapsulating the t3rn composable contracts registry.'
edition = '2018'
homepage = 'https://t3rn.io'
license = 'Unlicense'
name = 'pallet-contract-registry'
repository = 'https://github.com/t3rn/t3rn'
version = '3.0.0'
readme = "README.md"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }

[dev-dependencies]
serde = { version = "1.0.119" }
# `dev-dependencies` will use `std` regardless - makin it explicit here
sp-core = { features = ["std"], git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0"  }
sp-io = { features = ["std"], git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0"  }
sp-runtime = { features = ["std"], git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
