[package]
authors = ['0x1a3']
description = 'FRAME pallet encapsulating the onchain contract registry.'
edition = '2018'
homepage = 'https://t3rn.io'
license = 'Unlicense'
name = 'pallet-registry'
repository = 'https://github.com/t3rn/t3rn'
version = '0.0.0'
readme = "README.md"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "d5f992f" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "d5f992f" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "d5f992f" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "d5f992f" }
t3rn-primitives = { default-features = false, path = "../primitives" }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { features = ["std"], git = "https://github.com/paritytech/substrate.git", rev = "d5f992f" }
sp-io = { features = ["std"], git = "https://github.com/paritytech/substrate.git", rev = "d5f992f" }
sp-runtime = { features = ["std"], git = "https://github.com/paritytech/substrate.git", rev = "d5f992f" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',   
    'sp-std/std',
]
